<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.liteshop20.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.liteshop20.ui.Products.ProductSideShow"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_product_side_show" >
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.liteshop20.ui.Cart.CartSideShow"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
    </fragment>
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.liteshop20.ui.admin.AdminPanel"
        android:label="@string/admin_panel"
        tools:layout="@layout/admin_panel_fragment" >
    </fragment>
</navigation>