<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProduct">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/paddtxt4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonpupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/pAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupdeditText11" />

    <EditText
        android:id="@+id/pupdeditText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/pAddhint3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/pupdeditText11"
        app:layout_constraintTop_toBottomOf="@+id/pupdeditText9" />

    <EditText
        android:id="@+id/pupdeditText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/paddhint1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/pupdeditText9"
        app:layout_constraintTop_toBottomOf="@+id/pupdeditText20" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/παδδτχτ2"
        app:layout_constraintBaseline_toBaselineOf="@+id/pupdeditText8"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pupdeditText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/paddhint4"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pupdeditText10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="55dp"
        android:text="@string/paddtxt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/pupdeditText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/paddhint2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/pupdeditText10"
        app:layout_constraintTop_toBottomOf="@+id/pupdeditText8" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/apothematxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="51dp"
        android:text="@string/paddtxt5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="59dp"
        android:text="@string/idgivePUPD"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/pupdeditText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/id_7"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/pupdeditText8"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="νο" />

</androidx.constraintlayout.widget.ConstraintLayout>